src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__functionblocks__two_cycles_with_branch_input.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `F -> G -> H -> I -> F` has infinite size
   ┌─ <internal>:26:28
   │
26 │             FUNCTION_BLOCK F
   │                            ^
   │                            │
   │                            Recursive data structure `F -> G -> H -> I -> F` has infinite size
   │                            see also
   ·
33 │             FUNCTION_BLOCK G
   │                            - see also
   ·
39 │             FUNCTION_BLOCK H
   │                            - see also
   ·
45 │             FUNCTION_BLOCK I
   │                            - see also

error[E029]: Recursive data structure `B -> C -> E -> F -> B` has infinite size
   ┌─ <internal>:8:28
   │
 8 │             FUNCTION_BLOCK B
   │                            ^
   │                            │
   │                            Recursive data structure `B -> C -> E -> F -> B` has infinite size
   │                            see also
   ·
14 │             FUNCTION_BLOCK C
   │                            - see also
   ·
20 │             FUNCTION_BLOCK E
   │                            - see also
   ·
26 │             FUNCTION_BLOCK F
   │                            - see also
